# thorsenlabs.com

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_create_tables.sql
src/: db.rs  main.rs  server_error.rs  services.rs  template.rs
src/db/: moment.rs
src/services/: arbeidsdager.rs  article.rs  blog.rs  events.rs  files.rs  helpers.rs  index.rs  moments.rs  network.rs  photostream.rs  script.rs  wildcard.rs
src/template/: markdown.rs
static/: robots.txt  sitemap.xml
static/css/: pico2.jade.override.css  pico@2.1.1.min.css
static/js/: ssr@0.0.1.js  ssr@0.0.2.js  ssr@675e603.js
templates/: arbeidsdager.html  article.html  backpack.md  bad_request.html  base.html  blog.html  header.md  how-many-hours-can-i-stream.html  index.html  index.md  internal_server_error.html  map.html  not_found.html  presentations.md  scoped.css
templates/about/: intro.md  projects.md
templates/arbeidsdager/: arbeidsdager.js  index.html  intro.md  scoped.css  table.html
templates/backpack/: header.md  index.md
templates/blog/: 2006-02-19-snmp-effective-2.md  2006-03-07-xgl.md  2006-09-04-yapc-europe-2006.md  2007-08-30-yapc-europe-2007-vienna.md  2007-09-01-quelea-cable-modems-and-cmts.md  2008-01-13-720p.md  2008-05-06-more-perl-modules.md  2008-05-25-multimedia-updates-partially-old-news.md  2008-05-25-multimedia_updates__partially_old_news_.md  2009-05-12-dhcpd-module-name.md  2009-05-30-moose-is-cool.md  2009-06-01-line-noise-parentheses.md  2009-09-09-rt-tickets.md  2009-09-10-catalyst-controller-sugar.md  2009-09-18-docsis-config-file-generator.md  (+77 more)
(+35 files in other folders)
