[package]
name = "thorsen-pm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = { version = "0.6.6", features = ["actix-server"] }
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["clock", "now", "serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
pulldown-cmark = "0.11.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.12.0"
tera = "1.19.1"
