[package]
name = "thorsenlabs-com"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["clock", "now", "serde"] }
dotenv = "0.15.0"
pulldown-cmark = "0.11.0"
rand = "0.9.2"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.12.0"
tera = "1.19.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
